[CSS Container Queries] Ensure query containers have valid layout before resolving the subtree https://bugs.webkit.org/show_bug.cgi?id=235896

Reviewed by Alan Bujtas.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-contain/container-queries/container-type-invalidation-expected.txt:

Source/WebCore:

To resolve container queries we need to have up-to-date layout for the query containers before
style resolution advances to their descendants.

With this patch we bounce between style resolution and layout until all query containers are resolved.

* dom/Document.cpp:
(WebCore::Document::resolveStyle):

Loop style resolution/render tree update/layout until we have resolved everything.

* dom/Document.h:
(WebCore::Document::isResolvingContainerQueries const):
* page/FrameViewLayoutContext.cpp:
(WebCore::FrameViewLayoutContext::layout):
(WebCore::FrameViewLayoutContext::runOrScheduleAsynchronousTasks):

Don't run post-layout tasks when resolving query containers.

* style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::resolveComposedTree):
(WebCore::Style::TreeResolver::updateQueryContainer):

Track what has been resolved.

(WebCore::Style::TreeResolver::resolve):
* style/StyleTreeResolver.h:
(WebCore::Style::TreeResolver::hasUnresolvedQueryContainers const):
* style/StyleUpdate.h:
(WebCore::Style::Update::isEmpty const):



Canonical link: https://commits.webkit.org/246648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288906 268f45cc-cd09-0410-ab3c-d52691b4dbfc